nginx tls path added

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -8,8 +8,8 @@ http {
         server_name toddle-task.ddns.net;
 
         listen 443 ssl;
-        ssl_certificate /ssl/workflow.yocket.com/fullchain.pem;
-        ssl_certificate_key /ssl/workflow.yocket.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/toddle-task.ddns.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/toddle-task.ddns.net/privkey.pem;
 
         listen 80;
         if ($scheme != "https") {
